@@ -53,6 +53,8 @@ EXTRA_DIST = \
 	extattr.stderr.exp \
 	fbsd278566.vgtest \
 	fbsd278566.stderr.exp \
+	fchroot.vgtest \
+	fchroot.stderr.exp \
 	fexecve.vgtest \
 	fexecve.stderr.exp \
 	file_locking_wait6.vgtest \
@@ -109,6 +111,8 @@ EXTRA_DIST = \
 	sctp2.vgtest \
 	sctp2.stderr.exp \
 	sctp2.stdout.exp \
+	setcred.vgtest \
+	setcred.stderr.exp \
 	setproctitle.vgtest \
 	setproctitle.stderr.exp \
 	setproctitle.stdout.exp \
@@ -176,6 +180,11 @@ if HAVE_AIO_READV
 check_PROGRAMS += aiov
 endif
 
+if HAVE_FCHROOT
+check_PROGRAMS += fchroot
+fchroot_SOURCES = fchroot.cpp
+endif
+
 if HAVE_GETRLIMITUSAGE
 check_PROGRAMS += getrlimitusage
 endif
@@ -201,6 +210,12 @@ endif
 
 if FREEBSD_KQUEUEX_SYSCALL
 check_PROGRAMS += kqueuex
+endif
+
+if HAVE_SETCRED
+check_PROGRAMS += setcred
+setcred_SOURCES = setcred.cpp
+setcred_CXXFLAGS = ${AM_CXXFLAGS} @FLAG_W_NO_UNINITIALIZED@
 endif
 
 if FREEBSD_TIMERFD_SYSCALL
