@@ -9,6 +9,7 @@ The following bugs have been fixed or resolved on this branch.
 503641  close_range syscalls started failing with 3.25.0
 503914  mount syscall param filesystemtype may be NULL
 504177  FILE DESCRIPTORS banner shows when closing some inherited fds
+504265  FreeBSD: missing syscall wrappers for fchroot and setcred
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
